--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                             <strong>App Store</strong>
                         </div>
                     </div>
-                    <a href="#contact" class="store-btn">
+                    <a href="https://play.google.com/store/apps/details?id=com.antigravity.foodie_map" class="store-btn"
+                        target="_blank">
                         <i class="fa-brands fa-google-play"></i>
                         <div>
-                            <span>Join Beta on</span>
+                            <span>Get it on</span>
                             <strong>Google Play</strong>
                         </div>
                     </a>
@@ -109,9 +110,10 @@
                     <i class="fa-brands fa-apple"></i>
                     <strong>Coming Soon</strong>
                 </div>
-                <a href="#contact" class="store-btn white-btn">
+                <a href="https://play.google.com/store/apps/details?id=com.antigravity.foodie_map"
+                    class="store-btn white-btn" target="_blank">
                     <i class="fa-brands fa-google-play"></i>
-                    <strong>Join Beta</strong>
+                    <strong>Download Beta</strong>
                 </a>
             </div>
         </div>
@@ -122,12 +124,14 @@
             <h2>聯絡我們 / 加入內測</h2>
             <div class="contact-content">
                 <div class="contact-card">
-                    <i class="fa-solid fa-flask"></i>
-                    <h3>Google Play 內測申請</h3>
-                    <p>目前 Android 版本處於內部測試階段。</p>
-                    <p>若您希望搶先體驗，請發送郵件至：</p>
-                    <a href="mailto:kao273173@gmail.com" class="email-link">kao273173@gmail.com</a>
-                    <p class="note">請在信件標題註明「申請 Eaten 內測」</p>
+                    <i class="fa-brands fa-google"></i>
+                    <h3>加入內測計畫</h3>
+                    <p>目前 Android 版本開放內測。</p>
+                    <p>1. 先加入 Google Group 群組：</p>
+                    <a href="https://groups.google.com/g/eaten-foodmap" target="_blank" class="email-link">加入測試群組</a>
+                    <p style="margin-top: 10px;">2. 前往 Google Play 下載：</p>
+                    <a href="https://play.google.com/store/apps/details?id=com.antigravity.foodie_map" target="_blank"
+                        class="email-link">下載應用程式</a>
                 </div>
                 <div class="contact-card">
                     <i class="fa-brands fa-apple"></i>
