--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>吃吃帖 Eaten - 分享美食每一刻</title>
+    <title>吃吃帖 Eaten - 你的美食地圖</title>
     <link rel="icon" type="image/png" href="assets/app_icon.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
@@ -20,6 +20,7 @@
                 </div>
                 <div class="nav-links">
                     <a href="#features">功能介紹</a>
+                    <a href="#guide">使用教學</a>
                     <a href="#download" class="btn-primary">立即下載</a>
                 </div>
             </nav>
@@ -97,6 +98,38 @@
                     <h3>專屬清單</h3>
                     <p>建立你的口袋名單，再也不怕忘記好吃的店在哪裡。</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="guide" class="guide-section">
+        <div class="container">
+            <h2>如何開始</h2>
+            <div class="guide-steps">
+                <div class="step-card">
+                    <div class="step-number">1</div>
+                    <div class="step-content">
+                        <h3>下載並註冊</h3>
+                        <p>安裝 App 後，使用 Google 或 Apple 帳號快速登入，只需幾秒鐘即可開始。</p>
+                    </div>
+                </div>
+                <div class="step-card">
+                    <div class="step-number">2</div>
+                    <div class="step-content">
+                        <h3>發布第一篇美食</h3>
+                        <p>點擊「+」按鈕，上傳照片、選擇餐廳，並寫下你的真實評價。第一篇貼文還能獲得額外獎勵！</p>
+                    </div>
+                </div>
+                <div class="step-card">
+                    <div class="step-number">3</div>
+                    <div class="step-content">
+                        <h3>探索附近美食</h3>
+                        <p>根據您的定位顯示附近的美食文章。喜歡的店可以收藏，下次直接導航去吃。</p>
+                    </div>
+                </div>
+            </div>
+            <div class="guide-note">
+                <p><i class="fa-solid fa-circle-info"></i> 目前版本為剛上線，若無貼文屬正常現象，歡迎成為第一位分享者！</p>
             </div>
         </div>
     </section>
