--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@
                     <p>Apple 版本目前正在積極開發中。</p>
                     <p>追蹤我們的最新消息，獲取上架通知！</p>
                 </div>
+                <div class="contact-card">
+                    <i class="fa-solid fa-comments"></i>
+                    <h3>社群媒體</h3>
+                    <p>追蹤我們，獲取最新美食資訊、活動消息！</p>
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/share/1ALY3mQfWJ/?mibextid=wwXIfr" target="_blank"
+                            class="social-btn fb" aria-label="Facebook">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href="https://www.instagram.com/chichitie_eaten?igsh=MWRkMGxhcWMxMHA1ZA==" target="_blank"
+                            class="social-btn ig" aria-label="Instagram">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="https://lin.ee/IIb78N8" target="_blank" class="social-btn line" aria-label="LINE">
+                            <i class="fa-brands fa-line"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
