--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="icon-box">
                         <i class="fa-solid fa-fire"></i>
                     </div>
-                    <h3>今日精選</h3>
+                    <h3>每日精選</h3>
                     <p>每日推薦 5 家精選美食，左滑跳過、右滑收藏，輕鬆決定下一餐。</p>
                 </div>
                 <div class="feature-card">
