--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <section class="download-section" id="download">
         <div class="container">
             <h2 data-i18n="download_title">準備好開始美食之旅了嗎？</h2>
-            <p data-i18n="download_subtitle">目前雙平台版本皆開放內測中！</p>
+            <p data-i18n="download_subtitle">Android 正式上架，iOS 開放 TestFlight 內測中！</p>
             <div class="cta-buttons centered">
                 <a href="https://testflight.apple.com/join/eP22CWYF" class="store-btn white-btn" target="_blank">
                     <i class="fa-brands fa-apple"></i>
@@ -173,7 +173,7 @@
                 <a href="https://play.google.com/store/apps/details?id=com.antigravity.foodie_map"
                     class="store-btn white-btn" target="_blank">
                     <i class="fa-brands fa-google-play"></i>
-                    <strong>Download Beta</strong>
+                    <strong>Get it on Google Play</strong>
                 </a>
             </div>
         </div>
@@ -181,18 +181,14 @@
 
     <section id="contact" class="contact-section">
         <div class="container">
-            <h2 data-i18n="contact_title">聯絡我們 / 加入內測</h2>
+            <h2 data-i18n="contact_title">聯絡我們 / 下載與內測</h2>
             <div class="contact-content">
                 <div class="contact-card">
                     <i class="fa-brands fa-google"></i>
-                    <h3 data-i18n="contact_beta_title">加入內測計畫</h3>
-                    <p data-i18n="contact_beta_desc">目前 Android 版本開放內測。</p>
-                    <p data-i18n="contact_beta_step1">1. 先加入 Google Group 群組：</p>
-                    <a href="https://groups.google.com/g/eaten-foodmap" target="_blank" class="email-link"
-                        data-i18n="contact_beta_btn1">加入測試群組</a>
-                    <p style="margin-top: 10px;" data-i18n="contact_beta_step2">2. 前往 Google Play 下載：</p>
+                    <h3 data-i18n="contact_beta_title">Android 正式上架</h3>
+                    <p data-i18n="contact_beta_desc">Android 正式版已在 Google Play 上線。</p>
                     <a href="https://play.google.com/store/apps/details?id=com.antigravity.foodie_map" target="_blank"
-                        class="email-link" data-i18n="contact_beta_btn2">下載應用程式</a>
+                        class="email-link" data-i18n="contact_beta_btn2">前往 Google Play</a>
                 </div>
                 <div class="contact-card">
                     <i class="fa-brands fa-apple"></i>
@@ -269,14 +265,11 @@
                 step_3_desc: "根據您的定位顯示附近的美食文章。喜歡的店可以收藏，下次直接導航去吃。",
                 guide_note: "目前版本為剛上線，若無貼文屬正常現象，歡迎成為第一位分享者！",
                 download_title: "準備好開始美食之旅了嗎？",
-                download_subtitle: "目前雙平台版本皆開放內測中！",
-                contact_title: "聯絡我們 / 加入內測",
-                contact_beta_title: "加入內測計畫",
-                contact_beta_desc: "目前 Android 版本開放內測。",
-                contact_beta_step1: "1. 先加入 Google Group 群組：",
-                contact_beta_btn1: "加入測試群組",
-                contact_beta_step2: "2. 前往 Google Play 下載：",
-                contact_beta_btn2: "下載應用程式",
+                download_subtitle: "Android 正式上架，iOS 開放 TestFlight 內測中！",
+                contact_title: "聯絡我們 / 下載與內測",
+                contact_beta_title: "Android 正式上架",
+                contact_beta_desc: "Android 正式版已在 Google Play 上線。",
+                contact_beta_btn2: "前往 Google Play",
                 contact_ios_title: "iOS TestFlight",
                 contact_ios_desc1: "iOS 版本開放內測中。",
                 contact_ios_desc2: "點擊下方按鈕加入測試：",
@@ -313,14 +306,11 @@
                 step_3_desc: "See food posts based on your location. Save spots you like and navigate there directly next time.",
                 guide_note: "The app is newly launched. If you don't see posts yet, be the first to share!",
                 download_title: "Ready for your Foodie Journey?",
-                download_subtitle: "Beta is now open for both Android and iOS!",
-                contact_title: "Contact / Join Beta",
-                contact_beta_title: "Join Beta Program",
-                contact_beta_desc: "Android Beta is open now.",
-                contact_beta_step1: "1. Join Google Group:",
-                contact_beta_btn1: "Join Test Group",
-                contact_beta_step2: "2. Download on Google Play:",
-                contact_beta_btn2: "Download App",
+                download_subtitle: "Android is now live on Google Play. iOS is available via TestFlight beta.",
+                contact_title: "Contact / Download & Beta",
+                contact_beta_title: "Android Now Live",
+                contact_beta_desc: "The Android release is now live on Google Play.",
+                contact_beta_btn2: "Open Google Play",
                 contact_ios_title: "iOS TestFlight",
                 contact_ios_desc1: "iOS Beta is now available on TestFlight.",
                 contact_ios_desc2: "Click below to join:",
