--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="assets/app_icon.png" alt="Eaten Logo"> <span data-i18n="app_name">吃吃帖 Eaten</span>
+                    <img src="assets/app_icon.png" alt="Eaten Logo"> <span data-i18n="app_name">吃吃帖</span>
                 </div>
                 <div class="nav-links">
                     <a href="#features" data-i18n="nav_features">功能介紹</a>
@@ -80,12 +80,12 @@
                 <div class="phones-container">
                     <div class="phone-frame phone-back">
                         <div class="screen">
-                            <img src="assets/app_screen_1.png" alt="Eaten Feed View">
+                            <img src="assets/app_screen_1.png" alt="ChiChiTie Feed View">
                         </div>
                     </div>
                     <div class="phone-frame phone-front">
                         <div class="screen">
-                            <img src="assets/app_screen_2.png" alt="Eaten Daily Picks View">
+                            <img src="assets/app_screen_2.png" alt="ChiChiTie Daily Picks View">
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <div class="footer-logo">吃吃帖 Eaten</div>
+                <div class="footer-logo">吃吃帖</div>
                 <div class="footer-links">
                     <a href="#" data-i18n="footer_about">關於我們</a>
                     <a href="https://www.notion.so/Privacy-Policy-2eb14fd96c0080e8a5c9ebf2d7349608?source=copy_link"
@@ -231,7 +231,7 @@
                     <a href="mailto:kao273173@gmail.com" data-i18n="footer_contact">聯絡我們</a>
                 </div>
                 <div class="copyright">
-                    &copy; 2026 Eaten. All rights reserved.
+                    &copy; 2026 ChiChiTie. All rights reserved.
                 </div>
             </div>
         </div>
@@ -240,8 +240,8 @@
     <script>
         const translations = {
             zh: {
-                page_title: "吃吃帖 Eaten - 你的美食地圖",
-                app_name: "吃吃帖 Eaten",
+                page_title: "吃吃帖  - 你的美食地圖",
+                app_name: "吃吃帖 ChiChiTie",
                 nav_features: "功能介紹",
                 nav_guide: "使用教學",
                 nav_download: "立即下載",
@@ -281,14 +281,14 @@
                 footer_contact: "聯絡我們"
             },
             en: {
-                page_title: "Eaten - Your Foodie Map",
-                app_name: "Eaten",
+                page_title: "ChiChiTie - Your Foodie Map",
+                app_name: "ChiChiTie",
                 nav_features: "Features",
                 nav_guide: "Guide",
                 nav_download: "Download",
                 hero_title: "Discover Hidden<br><span class=\"highlight\">Gems Nearby</span>",
-                hero_subtitle: "Never worry about what to eat again! Eaten curates daily picks, explores nearby spots, and records your food journey.",
-                features_title: "Why Eaten?",
+                hero_subtitle: "Never worry about what to eat again! ChiChiTie curates daily picks, explores nearby spots, and records your food journey.",
+                features_title: "Why ChiChiTie?",
                 feature_1_title: "Daily Picks",
                 feature_1_desc: "Get 5 curated daily recommendations. Swipe left to skip, right to save. Deciding your next meal is easy!",
                 feature_2_title: "Nearby Gems",
